--- a/Marvel/Modules/Splash/SplashViewController.xib
+++ b/Marvel/Modules/Splash/SplashViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait" appearance="light"/>
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -15,20 +15,41 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="cargando..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BCC-xA-CbA">
-                    <rect key="frame" x="16" y="597" width="343" height="21"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MarvelLogo" translatesAutoresizingMaskIntoConstraints="NO" id="6Hm-ad-RWn">
+                    <rect key="frame" x="67" y="390.66666666666669" width="280" height="114.66666666666669"/>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="cargando..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BCC-xA-CbA">
+                    <rect key="frame" x="16" y="507" width="382" height="20"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="20" id="fUs-5i-j6f"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="10"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="MarvelPeople" translatesAutoresizingMaskIntoConstraints="NO" id="RgR-ev-x7O">
+                    <rect key="frame" x="0.0" y="704" width="414" height="233"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <point key="canvasLocation" x="45.600000000000001" y="117.39130434782609"/>
+            <constraints>
+                <constraint firstItem="6Hm-ad-RWn" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="CP1-m0-XEe"/>
+                <constraint firstItem="6Hm-ad-RWn" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="El6-OF-fbG"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="BCC-xA-CbA" secondAttribute="trailing" constant="16" id="UkI-6f-cA4"/>
+                <constraint firstItem="BCC-xA-CbA" firstAttribute="top" secondItem="6Hm-ad-RWn" secondAttribute="bottom" constant="2" id="xLQ-eL-cbE"/>
+                <constraint firstItem="6Hm-ad-RWn" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="250:800" id="xaH-Xf-YJt"/>
+                <constraint firstItem="BCC-xA-CbA" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="z7e-k7-fkX"/>
+            </constraints>
+            <point key="canvasLocation" x="44.927536231884062" y="117.1875"/>
         </view>
     </objects>
+    <resources>
+        <image name="MarvelLogo" width="284.66665649414062" height="114.33333587646484"/>
+        <image name="MarvelPeople" width="705.5" height="398.5"/>
+    </resources>
 </document>
