--- a/Marvel/Modules/CharacterList/CharacterListViewController.xib
+++ b/Marvel/Modules/CharacterList/CharacterListViewController.xib
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -27,12 +28,11 @@
                         <constraint firstAttribute="height" constant="80" id="YdZ-EN-jkx"/>
                     </constraints>
                 </view>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="3l4-Lx-U3Y">
-                    <rect key="frame" x="0.0" y="80" width="375" height="547"/>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="3l4-Lx-U3Y">
+                    <rect key="frame" x="0.0" y="80" width="375" height="587"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="FN6-QI-SAV">
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="2" minimumInteritemSpacing="2" id="FN6-QI-SAV">
                         <size key="itemSize" width="60" height="60"/>
-                        <size key="estimatedItemSize" width="60" height="60"/>
                         <size key="headerReferenceSize" width="0.0" height="0.0"/>
                         <size key="footerReferenceSize" width="0.0" height="0.0"/>
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -42,27 +42,17 @@
                         <outlet property="delegate" destination="-1" id="y1c-wH-HPq"/>
                     </connections>
                 </collectionView>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RpC-Rn-FXC" userLabel="FooterView">
-                    <rect key="frame" x="0.0" y="627" width="375" height="40"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="40" id="bbN-vT-yFh"/>
-                    </constraints>
-                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="RpC-Rn-FXC" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="5aU-Qa-mug"/>
                 <constraint firstItem="Wht-17-Z2I" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="RPn-bI-nYg"/>
                 <constraint firstItem="3l4-Lx-U3Y" firstAttribute="top" secondItem="Wht-17-Z2I" secondAttribute="bottom" id="SIW-jB-BwN"/>
-                <constraint firstItem="RpC-Rn-FXC" firstAttribute="trailing" secondItem="fnl-2z-Ty3" secondAttribute="trailing" id="Txb-mO-ZvF"/>
                 <constraint firstItem="Wht-17-Z2I" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="ZO1-Jt-dpn"/>
-                <constraint firstItem="RpC-Rn-FXC" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="g9D-Bd-ofC"/>
+                <constraint firstItem="3l4-Lx-U3Y" firstAttribute="trailing" secondItem="Wht-17-Z2I" secondAttribute="trailing" id="h9Z-K5-Vsz"/>
                 <constraint firstItem="Wht-17-Z2I" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="n0M-Qg-9NV"/>
-                <constraint firstItem="3l4-Lx-U3Y" firstAttribute="trailing" secondItem="RpC-Rn-FXC" secondAttribute="trailing" id="p7s-h1-8Av"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="3l4-Lx-U3Y" secondAttribute="bottom" id="v5y-Zf-I0F"/>
                 <constraint firstItem="3l4-Lx-U3Y" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="vzl-NV-Cvg"/>
-                <constraint firstItem="RpC-Rn-FXC" firstAttribute="top" secondItem="3l4-Lx-U3Y" secondAttribute="bottom" id="yZX-IF-gV9"/>
             </constraints>
             <point key="canvasLocation" x="141.59999999999999" y="124.58770614692655"/>
         </view>
