--- a/Marvel/Modules/CharacterDetail/CharacterDetailViewController.xib
+++ b/Marvel/Modules/CharacterDetail/CharacterDetailViewController.xib
@@ -70,7 +70,7 @@
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vof-XL-MXV">
                                             <rect key="frame" x="138.5" y="0.0" width="58.5" height="41"/>
                                             <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="30"/>
-                                            <color key="textColor" name="MarvelColor"/>
+                                            <color key="textColor" name="Progress Background"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="XyK-Wl-ZGu">
@@ -97,7 +97,7 @@
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstItem="evO-hc-7fL" firstAttribute="leading" secondItem="vvM-7G-nJB" secondAttribute="leading" id="6mN-mk-roc"/>
                         <constraint firstAttribute="bottom" secondItem="evO-hc-7fL" secondAttribute="bottom" constant="-48" id="8BO-n1-Ikp"/>
@@ -141,8 +141,8 @@
     <resources>
         <image name="MarvelPeople" width="705.5" height="398.5"/>
         <image name="chevron.down" catalog="system" width="128" height="72"/>
-        <namedColor name="MarvelColor">
-            <color red="0.93599998950958252" green="0.10999999940395355" blue="0.14300000667572021" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <namedColor name="Progress Background">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
