--- a/Marvel/Modules/CharacterDetail/CharacterDetailViewController.xib
+++ b/Marvel/Modules/CharacterDetail/CharacterDetailViewController.xib
@@ -47,7 +47,11 @@
                                 <constraint firstAttribute="width" constant="64" id="2Qe-aF-SE2"/>
                                 <constraint firstAttribute="height" constant="64" id="dfb-8P-oLi"/>
                             </constraints>
-                            <state key="normal" image="chevron.down" catalog="system"/>
+                            <color key="tintColor" name="Progress Background"/>
+                            <state key="normal" image="xmark" catalog="system"/>
+                            <connections>
+                                <action selector="actionGoBack:" destination="-1" eventType="touchUpInside" id="t4k-9O-wn2"/>
+                            </connections>
                         </button>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MarvelPeople" translatesAutoresizingMaskIntoConstraints="NO" id="40q-6Q-VML">
                             <rect key="frame" x="102.5" y="44" width="170" height="170"/>
@@ -140,7 +144,7 @@
     </objects>
     <resources>
         <image name="MarvelPeople" width="705.5" height="398.5"/>
-        <image name="chevron.down" catalog="system" width="128" height="72"/>
+        <image name="xmark" catalog="system" width="128" height="113"/>
         <namedColor name="Progress Background">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
