--- a/Marvel/Modules/CharacterDetail/Cell/StorieViewCell.xib
+++ b/Marvel/Modules/CharacterDetail/Cell/StorieViewCell.xib
@@ -18,46 +18,29 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HEQ-bs-CSx">
-                        <rect key="frame" x="277" y="5.5" width="33" height="33"/>
-                        <constraints>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="33" id="AGx-rv-cGg"/>
-                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="33" id="D1e-oM-k5j"/>
-                            <constraint firstAttribute="width" constant="33" id="rSn-Rb-NWg"/>
-                            <constraint firstAttribute="height" constant="33" id="xeb-Sp-JNg"/>
-                        </constraints>
-                        <buttonConfiguration key="configuration" style="gray" image="safari" catalog="system">
-                            <color key="baseBackgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        </buttonConfiguration>
-                        <connections>
-                            <action selector="actionOpenLink:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="0Gi-qY-HFE"/>
-                        </connections>
-                    </button>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g8V-Wg-Vjh">
-                        <rect key="frame" x="10" y="6.5" width="255" height="31"/>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g8V-Wg-Vjh">
+                        <rect key="frame" x="10" y="6.5" width="290" height="31"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="13"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Interior Story" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h91-Xc-zZK">
-                        <rect key="frame" x="78" y="25.5" width="187" height="13"/>
+                        <rect key="frame" x="78" y="25.5" width="222" height="13"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="13" id="cjX-b7-ZEM"/>
                         </constraints>
-                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="12"/>
+                        <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="14"/>
                         <color key="textColor" systemColor="opaqueSeparatorColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="g8V-Wg-Vjh" firstAttribute="height" secondItem="H2p-sc-9uM" secondAttribute="height" multiplier="0.7" id="FM0-PH-UbI"/>
-                    <constraint firstItem="HEQ-bs-CSx" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="GWn-Sn-M2U"/>
-                    <constraint firstItem="h91-Xc-zZK" firstAttribute="bottom" secondItem="HEQ-bs-CSx" secondAttribute="bottom" id="HuZ-Xo-ADR"/>
                     <constraint firstItem="g8V-Wg-Vjh" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="NMd-So-20O"/>
-                    <constraint firstItem="h91-Xc-zZK" firstAttribute="trailing" secondItem="g8V-Wg-Vjh" secondAttribute="trailing" id="NXj-YW-x54"/>
-                    <constraint firstAttribute="trailing" secondItem="HEQ-bs-CSx" secondAttribute="trailing" constant="10" id="Oyg-se-kdN"/>
-                    <constraint firstItem="HEQ-bs-CSx" firstAttribute="leading" secondItem="g8V-Wg-Vjh" secondAttribute="trailing" constant="12" id="eew-jj-AGZ"/>
+                    <constraint firstAttribute="trailing" secondItem="h91-Xc-zZK" secondAttribute="trailing" constant="20" id="NXj-YW-x54"/>
                     <constraint firstItem="g8V-Wg-Vjh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="f4C-wJ-6sd"/>
+                    <constraint firstItem="g8V-Wg-Vjh" firstAttribute="trailing" secondItem="h91-Xc-zZK" secondAttribute="trailing" id="x5c-Iz-MfL"/>
+                    <constraint firstAttribute="bottom" secondItem="h91-Xc-zZK" secondAttribute="bottom" constant="5.5" id="xap-Oa-31J"/>
                     <constraint firstItem="h91-Xc-zZK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="78" id="yp6-He-E8t"/>
                 </constraints>
             </tableViewCellContentView>
@@ -70,7 +53,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="safari" catalog="system" width="128" height="121"/>
         <systemColor name="opaqueSeparatorColor">
             <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
