--- a/Marvel/Modules/CharacterDetail/CharacterDetailViewController.xib
+++ b/Marvel/Modules/CharacterDetail/CharacterDetailViewController.xib
@@ -35,11 +35,11 @@
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kIM-f1-CQ6" userLabel="ViewWhite">
-                    <rect key="frame" x="0.0" y="340" width="375" height="127"/>
+                    <rect key="frame" x="0.0" y="300" width="375" height="167"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vvM-7G-nJB" userLabel="ViewTop">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="340"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WUw-SU-osA">
                             <rect key="frame" x="0.0" y="0.0" width="64" height="64"/>
@@ -54,7 +54,7 @@
                             </connections>
                         </button>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MarvelPeople" translatesAutoresizingMaskIntoConstraints="NO" id="40q-6Q-VML">
-                            <rect key="frame" x="102.5" y="44" width="170" height="170"/>
+                            <rect key="frame" x="102.5" y="54" width="170" height="170"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="170" id="Vdy-hc-UQI"/>
                                 <constraint firstAttribute="width" constant="170" id="cSP-vL-Roo"/>
@@ -65,11 +65,11 @@
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
                         </imageView>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="evO-hc-7fL">
-                            <rect key="frame" x="0.0" y="178" width="375" height="210"/>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="evO-hc-7fL" userLabel="ViewInto">
+                            <rect key="frame" x="0.0" y="168" width="375" height="180"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Z9I-io-NwO">
-                                    <rect key="frame" x="20" y="71" width="335" height="71"/>
+                                    <rect key="frame" x="20" y="71" width="335" height="41"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vof-XL-MXV">
                                             <rect key="frame" x="138.5" y="0.0" width="58.5" height="41"/>
@@ -77,8 +77,8 @@
                                             <color key="textColor" name="Progress Background"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="XyK-Wl-ZGu">
-                                            <rect key="frame" x="67.5" y="41" width="200" height="30"/>
+                                        <stackView hidden="YES" opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="XyK-Wl-ZGu">
+                                            <rect key="frame" x="67.5" y="0.0" width="200" height="30"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="30" id="u8u-zf-AIP"/>
                                             </constraints>
@@ -88,7 +88,7 @@
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="210" id="Eda-My-kSN"/>
+                                <constraint firstAttribute="height" constant="180" id="Eda-My-kSN"/>
                                 <constraint firstAttribute="trailing" secondItem="Z9I-io-NwO" secondAttribute="trailing" constant="20" id="alM-g8-roa"/>
                                 <constraint firstItem="Z9I-io-NwO" firstAttribute="leading" secondItem="evO-hc-7fL" secondAttribute="leading" constant="20" id="ujK-cZ-CUX"/>
                                 <constraint firstAttribute="bottom" secondItem="Z9I-io-NwO" secondAttribute="bottom" constant="68" id="vOD-bf-wdz"/>
@@ -106,17 +106,17 @@
                         <constraint firstItem="evO-hc-7fL" firstAttribute="leading" secondItem="vvM-7G-nJB" secondAttribute="leading" id="6mN-mk-roc"/>
                         <constraint firstAttribute="bottom" secondItem="evO-hc-7fL" secondAttribute="bottom" constant="-48" id="8BO-n1-Ikp"/>
                         <constraint firstItem="CyL-6Y-tv3" firstAttribute="centerX" secondItem="vvM-7G-nJB" secondAttribute="centerX" id="GIT-Wh-Aig"/>
-                        <constraint firstAttribute="height" constant="340" id="NaO-be-eS1"/>
+                        <constraint firstAttribute="height" constant="300" id="NaO-be-eS1"/>
                         <constraint firstAttribute="trailing" secondItem="evO-hc-7fL" secondAttribute="trailing" id="UWd-4z-2zF"/>
-                        <constraint firstItem="evO-hc-7fL" firstAttribute="top" secondItem="40q-6Q-VML" secondAttribute="bottom" constant="-36" id="eMA-d5-Z64"/>
+                        <constraint firstItem="evO-hc-7fL" firstAttribute="top" secondItem="40q-6Q-VML" secondAttribute="bottom" constant="-56" id="eMA-d5-Z64"/>
                         <constraint firstItem="WUw-SU-osA" firstAttribute="leading" secondItem="vvM-7G-nJB" secondAttribute="leading" id="g3f-UE-Cyc"/>
                         <constraint firstItem="CyL-6Y-tv3" firstAttribute="centerY" secondItem="WUw-SU-osA" secondAttribute="centerY" id="hSd-rE-8I3"/>
                         <constraint firstItem="40q-6Q-VML" firstAttribute="centerX" secondItem="vvM-7G-nJB" secondAttribute="centerX" id="t2u-Qh-366"/>
                         <constraint firstItem="WUw-SU-osA" firstAttribute="top" secondItem="vvM-7G-nJB" secondAttribute="top" id="wgi-FB-xb8"/>
                     </constraints>
                 </view>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" bouncesZoom="NO" style="plain" separatorStyle="none" rowHeight="50" estimatedRowHeight="-1" sectionHeaderHeight="60" estimatedSectionHeaderHeight="60" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="TVp-NX-e4d">
-                    <rect key="frame" x="0.0" y="340" width="375" height="327"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" rowHeight="50" estimatedRowHeight="-1" sectionHeaderHeight="60" estimatedSectionHeaderHeight="60" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="TVp-NX-e4d">
+                    <rect key="frame" x="0.0" y="300" width="375" height="367"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                 </tableView>
             </subviews>
@@ -139,7 +139,7 @@
                 <constraint firstAttribute="bottom" secondItem="TVp-NX-e4d" secondAttribute="bottom" id="iZS-Ud-B9S"/>
                 <constraint firstAttribute="top" secondItem="Lfn-Xm-62a" secondAttribute="top" id="rJ1-sg-xFa"/>
             </constraints>
-            <point key="canvasLocation" x="146" y="1"/>
+            <point key="canvasLocation" x="82" y="-11"/>
         </view>
     </objects>
     <resources>
